--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,14 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar { 
+  width: 0px;  
+  background: transparent;  
+}
+
 html {
+  -ms-overflow-style: none;  
+  scrollbar-width: none; 
   block-size: 100%;
 }
 
@@ -36,3 +43,198 @@ ul,
 ol {
   list-style: none;
 }
+
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  inline-size: 1px;
+  block-size: 1px;
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.content{
+  display: flex;
+  gap: 30px;
+  margin: 133px 30px;
+  inline-size: 100%;
+}
+
+.result{
+ padding-right: 30px;
+ margin-top: 78px;
+}
+
+.result__video-container {
+  inline-size: 711px;
+  margin-bottom: 16px;
+  position: relative;
+}
+
+.result__video {
+  inline-size: 100%;
+}
+
+.search-form {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.search-form__fieldset{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  border: none;
+  inline-size: 100%;
+}
+
+.search-form__fieldset-title{
+  font-weight: 400;
+  font-size: 18px;
+}
+
+
+
+.search-form__label{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.search-form__checkbox-list{
+  display: flex;
+  gap: 15px;
+  margin-top: 5px;
+}
+
+.search-form__pseudo-checkbox{
+  display: block;
+  border: 1px solid #FFF;
+  inline-size: 19px;
+  block-size: 19px;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  content: '';
+  display: block;
+  background-color: #FFF;
+  inline-size: 15px;
+  block-size: 15px;
+  margin: 1px 0 0 1px;
+}
+
+.search-form__textfield {
+  border-top: 1px solid #FFF;
+  border-right: none;
+  border-bottom: 1px solid #FFF;
+  border-left: none;
+  padding: 2px 0;
+  color: currentColor;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  background-color: transparent;
+  inline-size: 225px;
+}
+
+.button {
+  border: 1px solid #FFF;
+  padding: 6px 0;
+  color: #FFF;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  text-align: center;
+  background-color: transparent;
+  cursor: pointer;
+  inline-size: 100%;
+}
+
+.content_details{
+  inline-size: 100%;
+  max-height: 534px;
+}
+
+.title{
+  color: #FFF;
+  font-family: Oswald, sans-serif;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 70.5px;
+  text-transform: uppercase;
+  margin-bottom: 26px;
+}
+
+.content__accent{
+  color: #545050;
+}
+
+.content__list
+{
+  
+  position: relative;
+  overflow-y: scroll;
+  block-size: 298px;
+}
+
+.content__list-item{
+  margin-bottom: 30px;
+}
+
+.content__video-card-title{
+  color: #FFF;
+  font-family: Oswald;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+.content__video-card-description{
+  color: #FFF;
+  font-family: "Fira Sans Condensed";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16.2px; 
+}
+
+.content__video-card{
+	display: flex;
+	justify-content: space-between;
+}
+
+.content__video-card-thumbnail{
+	width: 194px;
+}
+
+.content__video-card-description-container{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.content__card-link
+{
+  text-decoration: none;
+}
+
+.content__card-link:hover
+{
+  text-decoration: underline;
+  color:#fff;
+}
+
+.content__card-link:focus{
+  border: 1px solid #FFF;
+}
+
+.content__video-card:active{
+  background-color:#545050;
+}
+
+input[type="checkbox"]:checked + span{}
