--- a/styles/style.css
+++ b/styles/style.css
@@ -4,11 +4,6 @@
   box-sizing: border-box;
 }
 
-::-webkit-scrollbar { 
-  width: 0px;  
-  background: transparent;  
-}
-
 html {
   -ms-overflow-style: none;  
   scrollbar-width: none; 
@@ -16,13 +11,15 @@ html {
 }
 
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
+	display: flex;
+  align-items: center;
   margin: auto;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  inline-size: 1200px;
+  block-size: 100%;
 }
 
 h1,
@@ -57,23 +54,28 @@ ol {
 .content{
   display: flex;
   gap: 30px;
-  margin: 133px 30px;
+  margin: 0 30px;
   inline-size: 100%;
 }
 
 .result{
- padding-right: 30px;
- margin-top: 78px;
+	align-self: flex-end;
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
 }
 
 .result__video-container {
   inline-size: 711px;
-  margin-bottom: 16px;
+	height: 386px;
   position: relative;
 }
 
 .result__video {
   inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .search-form {
@@ -94,22 +96,41 @@ ol {
   font-weight: 400;
   font-size: 18px;
 }
-
-
-
 .search-form__label{
   display: flex;
   align-items: center;
   gap: 5px;
   cursor: pointer;
 }
+.search-form__label:hover {
+  text-decoration: underline 1px #FFF;
+  text-underline-offset: 5px;
+}
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #FFF;
+  outline-offset: 1px;
+}
+.search-form__textfield::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+}
+.search-form__textfield:active {
+  outline: 1px solid #FFF;
+}
 
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__textfield:focus-visible {
+  outline: none;
+}
 .search-form__checkbox-list{
   display: flex;
   gap: 15px;
-  margin-top: 5px;
 }
-
 .search-form__pseudo-checkbox{
   display: block;
   border: 1px solid #FFF;
@@ -151,11 +172,30 @@ ol {
   background-color: transparent;
   cursor: pointer;
   inline-size: 100%;
+  margin-top: 20px;
+}
+.button:active {
+  background-color: #545050;
+}
+
+.button:hover {
+  text-decoration: underline 1px #FFF;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #FFF;
+  outline-offset: 1px;
+}
+.search-form__submit-button {
+  align-self: flex-end;
 }
 
 .content_details{
   inline-size: 100%;
-  max-height: 534px;
 }
 
 .title{
@@ -165,7 +205,7 @@ ol {
   font-size: 75px;
   line-height: 70.5px;
   text-transform: uppercase;
-  margin-bottom: 26px;
+  padding: 0 0 26px;
 }
 
 .content__accent{
@@ -174,67 +214,81 @@ ol {
 
 .content__list
 {
-  
   position: relative;
   overflow-y: scroll;
   block-size: 298px;
+	min-width:418px;
+	/* scrollbar-width: none; */
 }
+/* .content__list::-webkit-scrollbar {
+  display: none;
+} */
 
 .content__list-item{
   margin-bottom: 30px;
 }
-
-.content__video-card-title{
-  color: #FFF;
-  font-family: Oswald;
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 30px;
-  text-transform: uppercase;
+.content__list-item:not(:last-child) {
+  margin: 0 0 34px;
+}
+.content__card-link {
+  display: block;
+  margin: 2px;
+  text-decoration: none;
+}
+.content__card-link:active {
+  background-color: #545050;
 }
 
-.content__video-card-description{
-  color: #FFF;
-  font-family: "Fira Sans Condensed";
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 16.2px; 
+.content__card-link:hover {
+  text-decoration: underline 1px #FFF;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #FFF;
+}
+.content__card-link_current {
+  background-color: #545050;
 }
 
 .content__video-card{
 	display: flex;
 	justify-content: space-between;
 }
-
-.content__video-card-thumbnail{
-	width: 194px;
+.content__video-card-title{
+  color: #FFF;
+  font-family: Oswald, Arialf;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1;
+  text-transform: uppercase;
+	hyphens: auto;
 }
 
-.content__video-card-description-container{
+.content__video-card-description{
+  color: #FFF;
+  font-family: "Fira Sans Condensed", Arial;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16.2px; 
+	padding: 6px 0;
+}
+
+.content__video-card-thumbnail{
+  inline-size: 194px;
+  block-size: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+/* .content__video-card-description-container{
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-}
+} */
 
-.content__card-link
-{
-  text-decoration: none;
-}
-
-.content__card-link:hover
-{
-  text-decoration: underline;
-  color:#fff;
-}
-
-.content__card-link:focus{
-  border: 1px solid #FFF;
-}
-
-.content__video-card:active{
-  background-color:#545050;
-}
-
-input[type="checkbox"]:checked + span{}
