--- a/styles/style.css
+++ b/styles/style.css
@@ -194,10 +194,7 @@ ol {
 
 .more-button:focus-visible
 {
-  width: calc(100% - 2px);
-  height: calc(100% - 2px);
-  margin-bottom: 2px;
-  margin-left: 2px;
+  padding: 3px;
 }
 
 .search-form__submit-button {
